--- a/assets/scss/abstracts/_variables.scss
+++ b/assets/scss/abstracts/_variables.scss
@@ -6,5 +6,5 @@ $m-padding: 18px;
 $place-header-height: 48px;
 $place-tab-height: 46px;
 
-$header-heigth: $place-header-height + $place-tab-height;
-$oder-box-area-height: 70px;
+$header-height: $place-header-height + $place-tab-height;
+$order-box-area-height: 70px;
