--- a/assets/scss/components/menu/_order_info_area.scss
+++ b/assets/scss/components/menu/_order_info_area.scss
@@ -1,12 +1,12 @@
-.oder-info-area {
+.order-info-area {
     padding: 10px $m-padding 20px;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.4);
+    border-bottom: 1px solid rgba(0,0,0,0.04);
     background-color: $booking-color-bg155;
 
     .info-main-title {
         line-height: 39px;
     }
-    
+
     .title {
         display: flex;
         align-items: center;
@@ -14,8 +14,7 @@
         font-weight: 700;
         letter-spacing: -0.3px;
         color: $booking-color-text6;
-        
-        .ico_n_logo {
+        .ico-n-logo {
             margin-right: 6px;
             width: 24px;
             height: 24px;
@@ -27,13 +26,11 @@
     display: flex;
     align-items: center;
     margin-top: 12px;
-
     .tab-switch {
         flex: 1;
-        background-color: $booking-color-bg168;
+        background-color: $booking-color-bg158;
         line-height: 40px;
-        text-align: center;
-        font-size: 14px;
+        font-size: 13px;
         font-weight: 700;
         color: #666;
         letter-spacing: -0.3px;
@@ -46,8 +43,7 @@
             background-color: $booking-color-bg157;
             font-size: 15px;
             color: $booking-color-text126;
-            box-sizing: 0 2px 3px 0 rgba(0, 0, 0, 0.05);
-
+            box-shadow: 0 2px 3px 0 rgba(0,0,0,0.05);
             &::after {
                 content: '';
                 position: absolute;
@@ -58,7 +54,7 @@
                 border: 1px solid;
                 border-width: 0 1px 1px 0;
                 background-color: $booking-color-bg157;
-                transform: rotate(45deg) translate(-50%);
+                transform: rotate(45deg) translateX(-50%);
             }
 
             .ico-check {
@@ -89,6 +85,6 @@
         font-weight: 700;
     }
     .ico-clock {
-       margin-right: 6px; 
+        margin-right: 6px;
     }
 }
