--- a/assets/scss/components/menu/_order_type.scss
+++ b/assets/scss/components/menu/_order_type.scss
@@ -1,23 +1,13 @@
-.dimmed-layer {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: rgba(#000, 0.8);
-    z-index: 9999;
-}
-
 .order-type-popup {
     position: fixed;
     bottom: 0;
     left: 0;
     right: 0;
     padding: 32px 0 40px;
-    background-color: white;
     border-radius: 16px 16px 0 0;
-    z-index: 10000;
+    background-color: #fff;
     text-align: center;
+    z-index: 10000;
 
     .title {
         font-size: 20px;
@@ -32,7 +22,7 @@
 
     .type-item {
         flex: 1;
-        & + .type-item { /* 선택자 */
+        & + .type-item {
             border-left: 1px solid $booking-color-border103;
         }
     }
@@ -47,7 +37,7 @@
         margin-top: 8px;
         font-size: 15px;
         line-height: 1.5;
-        font-weight: 600;
+        font-weight: 600; 
         color: $booking-color-text1;
     }
 
@@ -62,4 +52,3 @@
         color: #fff;
     }
 }
-
