--- a/assets/scss/components/menu/_recent_order_area.scss
+++ b/assets/scss/components/menu/_recent_order_area.scss
@@ -1,4 +1,4 @@
-.recent-oder-area {
+.recent-order-area {
     display: flex;
     margin-top: 16px;
     padding: 18px 0;
@@ -7,22 +7,20 @@
 
     .recent-title {
         display: flex;
-        flex-shrink: 0;
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        flex-shrink: 0;
         padding: 8px;
         border-right: 1px solid $booking-color-bg102;
         line-height: 1.42;
         font-size: 12px;
         font-weight: 700;
         color: $booking-color-text6;
-
         .ico-clock {
             margin-bottom: 4px;
             width: 14px;
         }
-
     }
 
     .recent-menu-list {
@@ -31,15 +29,16 @@
 
     .recent-menu-item {
         box-sizing: content-box;
-        padding-left: 16px;
+        position: relative;
+        padding-right: 16px;
         width: 80px;
         text-align: center;
-        &.is-odered {
-            padding-right: 16px;
+        &.is-ordered {
+            padding-left: 16px;
             border-right: 1px solid $booking-color-bg102;
-        }
-        &:last-child {
-            padding-right: $m-padding;
+            & + .recent-menu-item {
+                padding-left: 16px;
+            }
         }
     }
 
@@ -47,9 +46,9 @@
         position: relative;
         width: 80px;
         height: 80px;
-        border: 1px solid $booking-color-border149;
+        border: 1px solid $booking-color-border149; 
         border-radius: 100%;
-        background-color: rgba(0, 0, 0, 0.01);
+        background-color: rgba(0,0,0,0.01);
     }
 
     .badge-popular {
@@ -72,14 +71,14 @@
     }
 
     .badge-cart {
-        display: flex;
         position: absolute;
-        bottom: 0;
-        right: 0;
+        top: 50px;
+        right: 16px;
+        display: flex;
         padding: 6px;
         border: 1px solid $booking-color-border150;
         border-radius: 100%;
-        background-color: $booking-color-bg8;
+        background-color: $booking-color-bg18;
     }
 
     .ico-cart {
@@ -88,16 +87,16 @@
     }
 
     .menu-name {
-        margin: 8px;
+        margin-top: 8px;
         font-weight: 600;
         font-size: 14px;
-        @include ellipse;
+        @include ellipsis;
     }
 
     .menu-price {
         font-size: 13px;
         font-weight: 700;
         color: $point-color;
-        @include ellipse;
+        @include ellipsis;
     }
 }
