--- a/assets/scss/base/_preset.scss
+++ b/assets/scss/base/_preset.scss
@@ -11,10 +11,25 @@
     overflow-x: auto;
     overflow-y: hidden;
     white-space: nowrap;
-    -webkit-overflow-scrolling: touch; /*모바일에서 사용*/
-    -ms-overflow-style: none; /*익스플로어 감추기*/
-    scrollbar-width: none; /*파이어폭스 감추기*/
-    &::-webkit-scrollbar { /*크롬 감추기*/
-        display: none; 
+    -webkit-overflow-scrolling: touch;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+    &::-webkit-scrollbar {
+        display: none;
     }
+}
+
+body.scroll-off {
+    overflow: hidden;
+    -ms-touch-action: none;
+    touch-action: none;
+}
+
+// functional css
+.fw700 {
+    font-weight: 700;
+}
+
+.color-point {
+    color: $point-color;
 }
