--- a/assets/scss/components/_go_to_top.scss
+++ b/assets/scss/components/_go_to_top.scss
@@ -1,5 +1,5 @@
 .go-to-top {
-    padding: 10px 0 32px;
+    padding: 16px 0 32px;
     background-color: #fff;
     text-align: center;
 
@@ -18,22 +18,21 @@
 
     .ico-up {
         position: relative;
-        margin-left: 4px;
         display: inline-block;
+        margin-left: 4px;
         width: 10px;
         height: 10px;
         &::before {
             content: '';
             position: absolute;
-            top: 3px;
+            top: 4px;
             left: 50%;
             width: 5px;
             height: 5px;
             border-top: 2px solid #666;
             border-left: 2px solid #666;
-            transform:translate(-50%, -50%) rotate(45deg);
+            transform: translate(-50%, -50%) rotate(45deg);
         }
-
         &::after {
             content: '';
             position: absolute;
@@ -42,7 +41,7 @@
             width: 2px;
             height: 9px;
             background-color: #666;
-            transform:translate(-50%, 0);
+            transform: translateX(-50%);
         }
     }
 }
