--- a/assets/scss/components/_header_area.scss
+++ b/assets/scss/components/_header_area.scss
@@ -12,25 +12,25 @@
         justify-content: space-between;
         align-items: center;
         height: $place-header-height;
+
+        .title {
+            display: flex;
+            align-items: center;
+            font-size: 20px;
+            font-weight: 600;
+        }
+
+        .link-back {
+            display: flex;
+        }
+
+        .my-orders {
+            padding-right: $m-padding;
+            font-size: 15px;
+            font-weight: 700;
+        }
     }
 
-    .title {
-        display: flex;
-        align-items: center;
-        font-size: 20px;
-        font-weight: 600;
-    }
-
-    .link-back {
-        display: flex;
-    }
-
-    .my-oders {
-        padding-right: $m-padding;
-        font-size: 15px;
-        font-weight: 700;
-    }
-    
     .place-tab {
         display: flex;
         height: $place-tab-height;
@@ -40,7 +40,7 @@
     .tab-inner {
         display: flex;
         justify-content: space-between;
-        align-items: center; 
+        align-items: center;
         padding: 0 8px;
         width: 100%;
 
