--- a/assets/scss/components/menu/_menu_category_area.scss
+++ b/assets/scss/components/menu/_menu_category_area.scss
@@ -1,6 +1,6 @@
 .menu-category-area {
     position: sticky;
-    top: $header-heigth;
+    top: $header-height;
     margin-top: 10px;
     background-color: #fff;
     z-index: 5500;
@@ -15,11 +15,10 @@
             left: 0;
             width: $m-padding;
             height: 100%;
-            background-image: linear-gradient(to left, rgba(255, 255, 255, 0), #fff 35%);
+            background-image: linear-gradient(to right, #fff 35%, rgba(255,255,255,0));
             pointer-events: none;
             z-index: 1;
         }
-
         &::after {
             content: '';
             position: absolute;
@@ -27,9 +26,8 @@
             right: 0;
             width: $m-padding;
             height: 100%;
-            background-image: linear-gradient(to right, rgba(255, 255, 255, 0), #fff 65%);
+            background-image: linear-gradient(to right, rgba(255,255,255,0), #fff 65%);
             pointer-events: none;
-            z-index: 1;
         }
     }
 
@@ -53,8 +51,8 @@
         align-items: center;
         padding: 0 12px;
         font-size: 16px;
-        border-radius: 15px;
         height: 30px;
+        border-radius: 15px;
         color: $booking-color-text6;
         &.is-active {
             background-color: $booking-color-bg165;
