--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -1,23 +1,29 @@
-@import "./abstracts/mixin_common";
-
 @import "./abstracts/variables_color";
 @import "./abstracts/variables";
+@import "./abstracts/mixin_common";
 
 @import "./base/reset";
 @import "./base/preset";
 
-@import "./pages/oder_page";
+@import "./components/amount_select";
+@import "./components/go_to_top";
 @import "./components/header_area";
 @import "./components/menu_item";
+@import "./components/modal";
 
-@import "./components/menu/oder_type";
-@import "./components/menu/oder_info_area";
-@import "./components/menu/recent_oder_area";
-@import "./components/menu/menu-category-area";
-@import "./components/menu/menu-list-area";
-@import "./components/menu/oder-box-area";
-@import "./components/menu/go_to_top";
-
-@import "./components/detail/menu_detail";
-@import "./components/detail/menu_popup_area";
+@import "./components/detail/menu_detail_area";
 @import "./components/detail/menu_review_area";
+@import "./components/detail/option_popup_area";
+
+@import "./components/menu/menu_category_area";
+@import "./components/menu/menu_list_area";
+@import "./components/menu/order_box_area";
+@import "./components/menu/order_info_area";
+@import "./components/menu/order_type";
+@import "./components/menu/recent_order_area";
+
+@import "./components/order/order_content_extra";
+@import "./components/order/order_content";
+@import "./components/order/order_form_area";
+
+@import "./pages/common";
